--- a/experimental.html
+++ b/experimental.html
@@ -2,6 +2,10 @@
 <html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Experimental Gallery</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Raymond G. Feilner, Jr.'s Experimental Art Techniques Gallery">
+		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Experimental, Autosetereoscopes, Magic Eye, View-Master, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D">
+		<meta name="author" content="Raymond G. Feilner, Jr.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Experimental Gallery"/>
 		<meta property="og:type" content="portfolio"/>
@@ -11,10 +15,9 @@
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Experimental Art Techniques Gallery"/>
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Experimental, Autosetereoscopes, Magic Eye, View-Master, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
-		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
-		<!--<script src="main.js"></script>-->
+		script src="https://code.jquery.com/jquery-latest.js"></script>
+		<script src="main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
 		<script>
@@ -27,37 +30,36 @@
 	<body>
 		<!-- Name Logo -->
 		<section id="header">
-			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
 				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
+
 		<!-- Icon Menu -->
 		<section class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
-				<img src="home.png" alt="Homepage">
+				<img src="images/home.png" alt="Homepage Link">
 			</a>
 			<a id="menu-animation" class="menu-icon" href="animation.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
 			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
+				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 			</a>
-			<a id="menu-album-covers" class="menu-icon" href="cover-art.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
+			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
+				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 			</a>
 			<a id="menu-surreal" class="menu-icon" href="surreal.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
 			<a id="menu-glass" class="menu-icon" href="reflections.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 			<a id="menu-experimental" class="menu-icon" href="experimental.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
 			<a id="menu-resume" class="menu-icon" href="resume.html">
-				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
+				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
 		</section>
 
@@ -69,10 +71,10 @@
 
 		<h2 class="subheader">Moon: Autostereoscopic Image</h2>
 		<div id="experimental-parallax-1" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Autostereoscope of a moon made in a similar style to Magic Eye">
+		<img class="no-parallax" src="images/experimental/autostereoscope-moon.png" alt="Autostereoscope of a moon made in a similar style to Magic Eye">
 
 		<h2 class="subheader">Torus: Free-viewing Stereoscopic Image</h2>
 		<div id="experimental-parallax-2" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/6. Experimental/b. Freeviewing Stereoscopic Image - Torus.png" alt="Stereoscopic image of a torus made in a similar style to a ViewMaster slide">
+		<img class="no-parallax" src="images/experimental/stereoscopic-torus.png" alt="Stereoscopic image of a torus made in a similar style to a ViewMaster slide">
 	</body>  
 </html>
