--- a/experimental.html
+++ b/experimental.html
@@ -10,11 +10,11 @@
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Experimental Gallery"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
-		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
+		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Experimental Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Experimental Art Techniques Gallery"/>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		script src="https://code.jquery.com/jquery-latest.js"></script>
 		<script src="main.js"></script>
@@ -31,7 +31,7 @@
 		<!-- Name Logo -->
 		<section id="header">
 			<span id="name-logo" class="logo">
-				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
+				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
 
