--- a/animation.html
+++ b/animation.html
@@ -10,7 +10,7 @@
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
-		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
+		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery"/>
