--- a/reflections.html
+++ b/reflections.html
@@ -2,19 +2,23 @@
 <html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Raymond G. Feilner, Jr.'s Gallery of Explorations of the Reflection and Refraction of Light within Transparent Geometries">
+		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Reflections, Refraction, Lighting Effects, Glass, Experimental, Blender, Photoshop, Gimp, 3D">
+		<meta name="author" content="Raymond G. Feilner, Jr.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
-		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
+		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
-		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Gallery of Explorations of Reflection and Refraction"/>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Gallery of Explorations of the Reflection and Refraction of Light within Transparent Geometries"/>
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Reflections, Refraction, Lighting Effects, Glass, Experimental, Blender, Photoshop, Gimp, 3D">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
-		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
-		<!--<script src="main.js"></script>-->
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
+		<script src="main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
 		<script>
@@ -27,37 +31,36 @@
 	<body>
 		<!-- Name Logo -->
 		<section id="header">
-			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
-				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
+				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
+
 		<!-- Icon Menu -->
 		<section class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
-				<img src="home.png" alt="Homepage">
+				<img src="images/home.png" alt="Homepage Link">
 			</a>
 			<a id="menu-animation" class="menu-icon" href="animation.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
 			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
+				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 			</a>
-			<a id="menu-album-covers" class="menu-icon" href="cover-art.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
+			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
+				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 			</a>
 			<a id="menu-surreal" class="menu-icon" href="surreal.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
 			<a id="menu-glass" class="menu-icon" href="reflections.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 			<a id="menu-experimental" class="menu-icon" href="experimental.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
 			<a id="menu-resume" class="menu-icon" href="resume.html">
-				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
+				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
 		</section>
 
@@ -69,22 +72,22 @@
 
 		<h2 class="subheader">Serenity</h2>
 		<div id="glass-parallax-1" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Glass Florette">
-
+		<img class="no-parallax" src="images/reflections/serenity.png" alt="Glass Florette">
+		
 		<h2 class="subheader">Contemplative</h2>
 		<div id="glass-parallax-2" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/b. Spheroid.png" alt="Glass Spheroid">
+		<img class="no-parallax" src="images/reflections/contemplative.png" alt="Glass Spheroid">
 
 		<h2 class="subheader">Sanguine</h2>
 		<div id="glass-parallax-3" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/c. Hemaglobin.png" alt="Hemoglobin">
+		<img class="no-parallax" src="images/reflections/sanguine.png" alt="Hemoglobin">
 
 		<h2 class="subheader">Deep Within</h2>
 		<div id="glass-parallax-4" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/d. Floral Glass Orb.png" alt="Floral Glass Orb">
+		<img class="no-parallax" src="images/reflections/deep-within.png" alt="Floral Glass Orb">
 
 		<h2 class="subheader">In Flux</h2>
 		<div id="glass-parallax-5" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/e. Bangles.png" alt="Toroidal Glass Sculpture">
+		<img class="no-parallax" src="images/reflections/flux.png" alt="Toroidal Glass Sculpture">
 	</body>
 </html>
