--- a/surreal.html
+++ b/surreal.html
@@ -2,19 +2,22 @@
 <html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Surreal Art Gallery</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Raymond G. Feilner, Jr.'s Surreal Art Gallery">
+		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Surreal, Blender, Photoshop, Gimp, 3D, Dreams, Salvador Dali, Cartoon">
+		<meta name="author" content="Raymond G. Feilner, Jr.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Surreal Art Gallery"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
-		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
+		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Surreal Art Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Surreal Art Gallery"/>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Surreal, Blender, Photoshop, Gimp, 3D, Dreams, Salvador Dali, Cartoon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
-		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
-		<!--<script src="main.js"></script>-->
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
+		<script src="main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
 		<script>
@@ -27,37 +30,36 @@
 	<body>
 		<!-- Name Logo -->
 		<section id="header">
-			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
-				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
+				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
+
 		<!-- Icon Menu -->
 		<section class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
-				<img src="home.png" alt="Homepage">
+				<img src="images/home.png" alt="Homepage Link">
 			</a>
 			<a id="menu-animation" class="menu-icon" href="animation.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
 			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
+				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 			</a>
-			<a id="menu-album-covers" class="menu-icon" href="cover-art.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
+			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
+				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 			</a>
 			<a id="menu-surreal" class="menu-icon" href="surreal.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
 			<a id="menu-glass" class="menu-icon" href="reflections.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 			<a id="menu-experimental" class="menu-icon" href="experimental.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
 			<a id="menu-resume" class="menu-icon" href="resume.html">
-				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
+				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
 		</section>
 
@@ -69,22 +71,22 @@
 		
 		<h2 class="subheader">Mortality</h2>
 		<div id="surreal-parallax-1" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="A beheaded teddy bear with balls of fluff nearby.">
+		<img class="no-parallax" src="images/surreal/mortality.png" alt="Childhood is transcended through the realiztion of one's mortality. This piece displays a beheaded teddy bear with balls of fluff nearby.">
 
 		<h2 class="subheader">Horizons</h2>
 		<div id="surreal-parallax-2" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/b. Flying Eye with Orange on Horizon.png" alt="An eyeball atop a wing of butter knife edges soaring in front of an orange. Inspired by a fanciful late-night dinner at a diner.">
+		<img class="no-parallax" src="images/surreal/horizons.png" alt="An eyeball atop a wing of butter knife edges soaring in front of an orange. Inspired by a fanciful late-night dinner at a diner.">
 
 		<h2 class="subheader">Dream Characters</h2>
 		<div id="surreal-parallax-3" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/c. Dream Characters.png" alt="A set of recurrent bizarre characters from past dreams.">
+		<img class="no-parallax" src="images/surreal/dream-characters.png" alt="A set of recurrent bizarre characters from past dreams.">
 
 		<h2 class="subheader">Daliesque</h2>
 		<div id="surreal-parallax-4" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/d. Daliesque.png" alt="A landscape in the style of Salvador Dali with cubist influences.">
+		<img class="no-parallax" src="images/surreal/daliesque.png" alt="A landscape in the style of Salvador Dali with cubist influences.">
 
 		<h2 class="subheader">Bub Lee</h2>
 		<div id="surreal-parallax-5" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/e. Bubble Cartoon.png" alt="A cartoon bubble with rainbow refractions and light-bending curves at the beach.">
+		<img class="no-parallax" src="images/surreal/bub-lee.png" alt="A cartoon bubble with rainbow refractions and light-bending curves at the beach.">
 	</body>
 </html>
