--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Portfolio</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Raymond G. Feilner, Jr.'s Portfolio and Resume">
+		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
+		<meta name="author" content="Raymond G. Feilner, Jr.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Portfolio"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
-		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
+		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Portfolio"/>
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Portfolio and Resume"/>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
-		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
-		<!--<script src="main.js"></script>-->
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
+		<script src="main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
 		<script>
@@ -27,37 +31,36 @@
 	<body>
 		<!-- Name Logo -->
 		<section id="header">
-			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
-				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
+				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
+
 		<!-- Icon Menu -->
 		<section class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
-				<img src="home.png" alt="Homepage">
+				<img src="images/home.png" alt="Homepage Link">
 			</a>
 			<a id="menu-animation" class="menu-icon" href="animation.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
 			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
+				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 			</a>
-			<a id="menu-album-covers" class="menu-icon" href="cover-art.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
+			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
+				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 			</a>
 			<a id="menu-surreal" class="menu-icon" href="surreal.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
 			<a id="menu-glass" class="menu-icon" href="reflections.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 			<a id="menu-experimental" class="menu-icon" href="experimental.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
 			<a id="menu-resume" class="menu-icon" href="resume.html">
-				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
+				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
 		</section>
 
@@ -70,37 +73,37 @@
 		<a href="animation.html">
 			<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
 			<div id="animation-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+			<img class="no-parallax" src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 		</a>
 
 		<a href="image-editing.html">
 			<h2 class="subheader">Image Editing Gallery</h2>
 			<div id="photo-editing-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
+			<img class="no-parallax" src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 		</a>
 
 		<a href="cover-art.html">
 			<h2 class="subheader">Cover Art and Logos Gallery</h2>
 			<div id="album-covers-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
+			<img class="no-parallax" src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 		</a>
 
 		<a href="surreal.html">
 			<h2 class="subheader">Surreal Art Gallery</h2>
 			<div id="surreal-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+			<img class="no-parallax" src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 		</a>
 
 		<a href="reflections.html">
 			<h2 class="subheader">Explorations of Reflections and Refractivity Gallery</h2>
 			<div id="glass-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+			<img class="no-parallax" src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 		</a>
 
 		<a href="experimental.html">
 			<h2 class="subheader">Experimental Gallery</h2>
 			<div id="experimental-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+			<img class="no-parallax" src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 		</a>
 
 		<!-- Clickable thumbnails -->
@@ -109,34 +112,34 @@
 			<p>Click on an image below to view the associated gallery.</p>
 
 			<a id="thumbnail-animation" class="thumbnail" href="animation.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
 
 			<a id="thumbnail-photo-editing" class="thumbnail" href="image-editing.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+				<img src="images/image-editing/studly.png" alt="Photo Editing Gallery Link">
 			</a>
 
 			<a id="thumbnail-album-covers" class="thumbnail" href="cover-art.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Album Covers Gallery Link">
 			</a>
 
 			<a id="thumbnail-surreal" class="thumbnail" href="surreal.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
 
 			<a id="thumbnail-glass" class="thumbnail" href="reflections.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 
 			<a id="thumbnail-experimental" class="thumbnail" href="experimental.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
 		</section>
 		<section id="resume">
 			<a href="resume.html">
 				<h2 class="header">Resume</h2>
 				<span id="notebook-paper" class="icon">
-					<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+					<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 				</span>
 				<span class="message">Click here to view a list of some of my professional accomplishments.</span>
 			</a>
