--- a/experimental.html
+++ b/experimental.html
@@ -29,14 +29,14 @@
 	</head>
 	<body>
 		<!-- Name Logo -->
-		<section id="header">
+		<div id="header">
 			<span id="name-logo" class="logo">
 				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
-		</section>
+		</div>
 
 		<!-- Icon Menu -->
-		<section class="icon-menu">
+		<nav class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
 				<img src="images/home.png" alt="Homepage Link">
 			</a>
@@ -61,7 +61,7 @@
 			<a id="menu-resume" class="menu-icon" href="resume.html">
 				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
-		</section>
+		</nav>
 
 		<h1 class="subheader">Experimental Gallery</h1>
 		<!-- Separator between gallery title and images -->
