--- a/resume.html
+++ b/resume.html
@@ -29,15 +29,15 @@
 	</head>
 	<body>
 		<!-- Name Logo -->
-		<section id="header">
+		<div id="header">
 			<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Resume'</h1>
 			<span id="name-logo" class="logo">
 				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
-		</section>
+		</div>
 
 		<!-- Icon Menu -->
-		<section class="icon-menu">
+		<nav class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
 				<img src="images/home.png" alt="Homepage Link">
 			</a>
@@ -62,7 +62,7 @@
 			<a id="menu-resume" class="menu-icon" href="resume.html">
 				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
-		</section>
+		</nav>
 
 		<section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>
 		<section id="professional">
