--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</a>
 
 		<!-- Clickable thumbnails -->
-		<section id="portfolio">
+		<nav id="portfolio">
 			<h2 class="header">Multimedia Art Portfolio Gallery Links</h2>
 			<p>Click on an image below to view the associated gallery.</p>
 
@@ -134,8 +134,8 @@
 			<a id="thumbnail-experimental" class="thumbnail" href="experimental.html">
 				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
-		</section>
-		<section id="resume">
+		</nav>
+		<div id="resume">
 			<a href="resume.html">
 				<h2 class="header">Resume</h2>
 				<span id="notebook-paper" class="icon">
@@ -143,6 +143,6 @@
 				</span>
 				<span class="message">Click here to view a list of some of my professional accomplishments.</span>
 			</a>
-		</section>
+		</div>
 	</body>
 </html>
