--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 			</a>
 		</nav>
 		<div id="resume">
+			<h2 class="header">Resume</h2>
 			<a href="resume.html">
-				<h2 class="header">Resume</h2>
 				<span id="notebook-paper" class="icon">
-					<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
+					<img src="images/paper.png" alt="Click here to view a list of some of my professional accomplishments.">
 				</span>
 				<span class="message">Click here to view a list of some of my professional accomplishments.</span>
 			</a>
