--- a/index.html
+++ b/index.html
@@ -111,29 +111,31 @@
 			<h2 class="header">Multimedia Art Portfolio Gallery Links</h2>
 			<p>Click on an image below to view the associated gallery.</p>
 
-			<a id="thumbnail-animation" class="thumbnail" href="animation.html">
-				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
-			</a>
+			<div class="thumbnail-container">
+				<a id="thumbnail-animation" class="thumbnail" href="animation.html">
+					<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
+				</a>
 
-			<a id="thumbnail-photo-editing" class="thumbnail" href="image-editing.html">
-				<img src="images/image-editing/studly.png" alt="Photo Editing Gallery Link">
-			</a>
+				<a id="thumbnail-photo-editing" class="thumbnail" href="image-editing.html">
+					<img src="images/image-editing/studly.png" alt="Photo Editing Gallery Link">
+				</a>
 
-			<a id="thumbnail-album-covers" class="thumbnail" href="cover-art.html">
-				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Album Covers Gallery Link">
-			</a>
+				<a id="thumbnail-album-covers" class="thumbnail" href="cover-art.html">
+					<img src="images/cover-art/dare-devil-blackout.jpg" alt="Album Covers Gallery Link">
+				</a>
 
-			<a id="thumbnail-surreal" class="thumbnail" href="surreal.html">
-				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
-			</a>
+				<a id="thumbnail-surreal" class="thumbnail" href="surreal.html">
+					<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
+				</a>
 
-			<a id="thumbnail-glass" class="thumbnail" href="reflections.html">
-				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
-			</a>
+				<a id="thumbnail-glass" class="thumbnail" href="reflections.html">
+					<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
+				</a>
 
-			<a id="thumbnail-experimental" class="thumbnail" href="experimental.html">
-				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
-			</a>
+				<a id="thumbnail-experimental" class="thumbnail" href="experimental.html">
+					<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
+				</a>
+			</div>
 		</nav>
 		<div id="resume">
 			<h2 class="header">Resume</h2>
