--- a/cover-art.html
+++ b/cover-art.html
@@ -17,7 +17,7 @@
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<script async src="https://code.jquery.com/jquery-latest.js"></script>
-		<script defer src="main.js"></script>
+		<script async src="main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
 		<script>
