--- a/index-trial.html
+++ b/index-trial.html
@@ -16,7 +16,7 @@
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Portfolio and Resume"/>
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
-		<link href="main.css" rel="stylesheet" type="text/css"/>
+		<link href="main-trial.css" rel="stylesheet" type="text/css"/>
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
 		<script src="main.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
