--- a/index-trial.html
+++ b/index-trial.html
@@ -29,122 +29,28 @@
 		</script>
 	</head>
 	<body>
-		<!-- Name Logo -->
-		<div id="header">
-			<span id="name-logo" class="logo">
-				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
-			</span>
-		</div>
-
-		<!-- Icon Menu -->
-		<nav class="icon-menu">
-			<a id="menu-home" class="menu-icon" href="index.html">
-				<img src="images/home.png" alt="Homepage Link">
-			</a>
-			<a id="menu-animation" class="menu-icon" href="animation.html">
-				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
-			</a>
-			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
-				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
-			</a>
-			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
-				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
-			</a>
-			<a id="menu-surreal" class="menu-icon" href="surreal.html">
-				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
-			</a>
-			<a id="menu-glass" class="menu-icon" href="reflections.html">
-				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
-			</a>
-			<a id="menu-experimental" class="menu-icon" href="experimental.html">
-				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
-			</a>
-			<a id="menu-resume" class="menu-icon" href="resume.html">
-				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
-			</a>
-		</nav>
-
-		<h1 class="subheader">Raymond G. Feilner, Jr.'s Portfolio</h1>
-		<!-- Separator between gallery title and images -->
-		<div class="spacer"></div>
-		<!-- Spacing image with scroll command -->
-		<div id="down-parallax" class="parallax"></div>
-
-		<a href="animation.html">
-			<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
-			<div id="animation-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
-		</a>
-
-		<a href="image-editing.html">
-			<h2 class="subheader">Image Editing Gallery</h2>
-			<div id="photo-editing-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
-		</a>
-
-		<a href="cover-art.html">
-			<h2 class="subheader">Cover Art and Logos Gallery</h2>
-			<div id="album-covers-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
-		</a>
-
-		<a href="surreal.html">
-			<h2 class="subheader">Surreal Art Gallery</h2>
-			<div id="surreal-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
-		</a>
-
-		<a href="reflections.html">
-			<h2 class="subheader">Explorations of Reflections and Refractivity Gallery</h2>
-			<div id="glass-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
-		</a>
-
-		<a href="experimental.html">
-			<h2 class="subheader">Experimental Gallery</h2>
-			<div id="experimental-parallax-1" class="parallax"></div>
-			<img class="no-parallax" src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
-		</a>
-
-		<!-- Clickable thumbnails -->
-		<nav id="portfolio">
-			<h2 class="header">Multimedia Art Portfolio Gallery Links</h2>
-			<p>Click on an image below to view the associated gallery.</p>
-
-			<div class="thumbnail-container">
-				<a id="thumbnail-animation" class="thumbnail" href="animation.html">
-					<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
-				</a>
-
-				<a id="thumbnail-photo-editing" class="thumbnail" href="image-editing.html">
-					<img src="images/image-editing/studly.png" alt="Photo Editing Gallery Link">
-				</a>
-
-				<a id="thumbnail-album-covers" class="thumbnail" href="cover-art.html">
-					<img src="images/cover-art/dare-devil-blackout.jpg" alt="Album Covers Gallery Link">
-				</a>
-
-				<a id="thumbnail-surreal" class="thumbnail" href="surreal.html">
-					<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
-				</a>
-
-				<a id="thumbnail-glass" class="thumbnail" href="reflections.html">
-					<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
-				</a>
-
-				<a id="thumbnail-experimental" class="thumbnail" href="experimental.html">
-					<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
-				</a>
-			</div>
-		</nav>
-		<div id="resume">
-			<h2 class="header">Resume</h2>
-			<a href="resume.html">
-				<span id="notebook-paper" class="icon">
-					<img src="images/paper.png" alt="Click here to view a list of some of my professional accomplishments.">
-				</span>
-				<span class="message">Click here to view a list of some of my professional accomplishments.</span>
-			</a>
+		<div class="container">
+			<section>
+				<h1>Raymond G. Feilner, Jr.</h1>
+				<p>
+					Hello. I'm Raymond. I'm a curious, creative little booger. I have a deep passion for helping people help others and themselves. I fall firmly in the intersection between a rational, logical thinker and a social, artistic innovator. I am a fun mix of data scientist, cognitive scientist, quantitative psychologist, full-stack web developer, graphics designer, author, educator, and so much more. I love evaluating research methods, engaging in process improvement, creating data visualizations, and facilitating the implementation of evidence-based practices.
+				</p>
+				<p>
+					Me llamo Raymond. Soy un creativo astuto y curioso. Tengo una gran pasión para apoyar a las personas a ayudar a los demás y a sí mismos. Me encuentro a la intersección entre un pensador  racional y lógico y un innovador social y artístico. Soy una mezcla divertida de científico de datos,  científico cognitivo, psicólogo cuantitativo, desarrollador web completo (full-stack), diseñador gráfico, escritor, educador, y mucho más. Me disfruto evaluar los métodos de investigación, participar en el mejoramiento de procesos, crear las visualizaciones de datos, y facilitar la implementación de las prácticas basadas en la evidencia. 
+				</p>
+			</section>
+			<section>
+				<h1>Art</h1>
+			</section>
+			<section>
+				<h1>R Programming</h1>
+			</section>
+			<section>
+				<h1>Python Programming</h1>
+			</section>
+			<section>
+				<h1>Resume</h1>
+			</section>
 		</div>
 	</body>
 </html>
