--- a/index-trial.html
+++ b/index-trial.html
@@ -29,28 +29,53 @@
 		</script>
 	</head>
 	<body>
-		<div class="container">
-			<section>
-				<h1>Raymond G. Feilner, Jr.</h1>
-				<p>
-					Hello. I'm Raymond. I'm a curious, creative little booger. I have a deep passion for helping people help others and themselves. I fall firmly in the intersection between a rational, logical thinker and a social, artistic innovator. I am a fun mix of data scientist, cognitive scientist, quantitative psychologist, full-stack web developer, graphics designer, author, educator, and so much more. I love evaluating research methods, engaging in process improvement, creating data visualizations, and facilitating the implementation of evidence-based practices.
-				</p>
-				<p>
-					Me llamo Raymond. Soy un creativo astuto y curioso. Tengo una gran pasión para apoyar a las personas a ayudar a los demás y a sí mismos. Me encuentro a la intersección entre un pensador  racional y lógico y un innovador social y artístico. Soy una mezcla divertida de científico de datos,  científico cognitivo, psicólogo cuantitativo, desarrollador web completo (full-stack), diseñador gráfico, escritor, educador, y mucho más. Me disfruto evaluar los métodos de investigación, participar en el mejoramiento de procesos, crear las visualizaciones de datos, y facilitar la implementación de las prácticas basadas en la evidencia. 
-				</p>
-			</section>
-			<section>
-				<h1>Art</h1>
-			</section>
-			<section>
-				<h1>R Programming</h1>
-			</section>
-			<section>
-				<h1>Python Programming</h1>
-			</section>
-			<section>
-				<h1>Resume</h1>
-			</section>
+		<div class="outer-container">
+			<div class="inner-container">
+				<section>
+					<h1>Raymond G. Feilner, Jr.</h1>
+					<p>
+						Hello. I'm Raymond. I'm a curious, creative little booger. I have a deep passion for helping people help others and themselves. I fall firmly in the intersection between a rational, logical thinker and a social, artistic innovator. I am a fun mix of data scientist, cognitive scientist, quantitative psychologist, full-stack web developer, graphics designer, author, educator, and so much more. I love evaluating research methods, engaging in process improvement, creating data visualizations, and facilitating the implementation of evidence-based practices.
+					</p>
+					<p>
+						Me llamo Raymond. Soy un creativo astuto y curioso. Tengo una gran pasión para apoyar a las personas a ayudar a los demás y a sí mismos. Me encuentro a la intersección entre un pensador  racional y lógico y un innovador social y artístico. Soy una mezcla divertida de científico de datos,  científico cognitivo, psicólogo cuantitativo, desarrollador web completo (full-stack), diseñador gráfico, escritor, educador, y mucho más. Me disfruto evaluar los métodos de investigación, participar en el mejoramiento de procesos, crear las visualizaciones de datos, y facilitar la implementación de las prácticas basadas en la evidencia. 
+					</p>
+				</section>
+				<section>
+					<h1>Art</h1>
+				</section>
+				<section>
+					<h1>R Programming</h1>
+				</section>
+				<section>
+					<h1>Python Programming</h1>
+				</section>
+				<section>
+					<h1>Resume</h1>
+				</section>
+			</div>
+			<div class="inner-container">
+				<section>
+					<h1>Raymond G. Feilner, Jr.</h1>
+					<p>
+						Hello. I'm Raymond. I'm a curious, creative little booger. I have a deep passion for helping people help others and themselves. I fall firmly in the intersection between a rational, logical thinker and a social, artistic innovator. I am a fun mix of data scientist, cognitive scientist, quantitative psychologist, full-stack web developer, graphics designer, author, educator, and so much more. I love evaluating research methods, engaging in process improvement, creating data visualizations, and facilitating the implementation of evidence-based practices.
+					</p>
+					<p>
+						Me llamo Raymond. Soy un creativo astuto y curioso. Tengo una gran pasión para apoyar a las personas a ayudar a los demás y a sí mismos. Me encuentro a la intersección entre un pensador  racional y lógico y un innovador social y artístico. Soy una mezcla divertida de científico de datos,  científico cognitivo, psicólogo cuantitativo, desarrollador web completo (full-stack), diseñador gráfico, escritor, educador, y mucho más. Me disfruto evaluar los métodos de investigación, participar en el mejoramiento de procesos, crear las visualizaciones de datos, y facilitar la implementación de las prácticas basadas en la evidencia. 
+					</p>
+				</section>
+				<section>
+					<h1>Art</h1>
+				</section>
+				<section>
+					<h1>R Programming</h1>
+				</section>
+				<section>
+					<h1>Python Programming</h1>
+				</section>
+				<section>
+					<h1>Resume</h1>
+				</section>
+			</div>
 		</div>
 	</body>
 </html>
