--- a/index-trial.html
+++ b/index-trial.html
@@ -18,7 +18,7 @@
 		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
 		<link href="main-trial.css" rel="stylesheet" type="text/css"/>
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
-		<!--script src="main.js"></script-->
+		<script src="main-trial.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
 		<script>
