Update Raymond G Feilner Jr - CV.html
Added to Professional Experience

--- a/Raymond G Feilner Jr - CV.html
+++ b/Raymond G Feilner Jr - CV.html
@@ -209,6 +209,20 @@
 			 <section id="professional">
 				 <h2 class="header">Professional Background</h2>
 				 <div class="subsection">
+					<h3 class="main_item">Adjunct Professor of Psychology</h3>
+					<span class="submain">St. Louis Community College</span>
+					<span class="date">
+						<span class="start_date">January 2022</span>
+						<span> - </span>
+						<span class="end_date">Present</span>
+					</span>
+					<ul>
+						<li class="bulleted">Promote student achievements in General Psychology, Human Growth & Development, and Abnormal Psychology</li>
+						<li class="bulleted">Guide and mentor undergraduate honor students in research projects in psychology</li>
+						<li class="bulleted">Utilize a variety of pedagogical techniques to teach in-person, online asynchronous, and live virtual lecture formats</li>
+					</ul>
+				 </div>
+				 <div class="subsection">
 					 <h3 class="main_item">Tutor</h3>
 					 <span class="submain">Chegg</span>
 					 <span class="date">
