--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,20 @@
 		<section id="professional">
 			<h2 class="header">Professional Background</h2>
 			<div class="subsection">
+				<h3 class="main_item">Adjunct Professor of Psychology</h3>
+				<span class="submain">St. Louis Community College</span>
+				<span class="date">
+					<span class="start_date">January 2022</span>
+					<span> - </span>
+					<span class="end_date">Present</span>
+				</span>
+				<ul>
+					<li class="bulleted">Promote student achievements in General Psychology, Human Growth & Development, and Abnormal Psychology</li>
+					<li class="bulleted">Guide and mentor undergraduate honor students in research projects in psychology</li>
+					<li class="bulleted">Utilize a variety of pedagogical techniques to teach in-person, online asynchronous, and live virtual lecture formats</li>
+				</ul>
+			</div>
+			<div class="subsection">
 				<h3 class="main-item">Data Analyst, Full-stack Web Developer, Graphic Designer</h3>
 				<span class="submain">Portenzo</span>
 				<span class="date">
@@ -225,10 +239,12 @@
  					 <span class="date">Graduation Date: May 2006</span>
  				 </div>
  				 <ul>
- 					 <li class="bulleted">Bachelor of Science in <b>Mathematics</b></li>
- 					 <li class="bulleted">Bachelor of Arts in <b>Spanish</b></li>
- 					 <li class="bulleted">Minor in <b>Statistical Methods</b></li>
- 					 <li class="bulleted">Minor in <b>Computer Science</b></li>
+					 <li class="bulleted">Bachelor of Science in <b>Mathematics</b></li>
+					 <li class="bulleted">Bachelor of Science in <b>Psychology</b></li>
+					 <li class="bulleted">Bachelor of Science in <b>English: Linguistics</b></li>
+					 <li class="bulleted">Bachelor of Arts in <b>Spanish</b></li>
+					 <li class="bulleted">Minor in <b>Statistical Methods</b></li>
+					 <li class="bulleted">Minor in <b>Computer Science</b></li>
  				 </ul>
  			</div>
 		</section>
