--- a/resume.html
+++ b/resume.html
@@ -68,12 +68,12 @@
 		<section id="professional">
 			<h2 class="header">Professional Background</h2>
 			<div class="subsection">
-				<h3 class="main_item">Adjunct Professor of Psychology</h3>
+				<h3 class="main-item">Adjunct Professor of Psychology</h3>
 				<span class="submain">St. Louis Community College</span>
 				<span class="date">
-					<span class="start_date">January 2022</span>
+					<span class="start-date">January 2022</span>
 					<span> - </span>
-					<span class="end_date">Present</span>
+					<span class="end-date">Present</span>
 				</span>
 				<ul>
 					<li class="bulleted">Promote student achievements in General Psychology, Human Growth & Development, and Abnormal Psychology</li>
