Update Raymond G Feilner Jr - Resume.html
Fixed title attribute placement

--- a/Raymond G Feilner Jr - Resume.html
+++ b/Raymond G Feilner Jr - Resume.html
@@ -37,26 +37,26 @@
 			<a id="home" class="menu_icon" href="index.html">
 				<img src="home.png" alt="Homepage">
 			</a>
-			<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" title="3D Animated Music Videos" alt="3D Animated Music Video Clips Gallery">
+			<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html" title="3D Animated Music Videos">
+				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 			</a>
-			<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" title="Photo Editing" alt="Photo Editing Gallery">
+			<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html" title="Photo Editing">
+				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
 			</a>
-			<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" title="Album Covers" alt="Album Covers Gallery">
+			<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html" title="Album Covers">
+				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
 			</a>
-			<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" title="Surreal Art" alt="Surreal Art Gallery">
+			<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html" title="Surreal Art">
+				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 			</a>
-			<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" title="Reflection and Refraction" alt="Reflection and Refraction Art Gallery">
+			<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html" title="Reflection and Refraction">
+				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 			</a>
-			<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" title="Experimental" alt="Experimental Gallery">
+			<a id="experimental" class="menu_icon" href="Experimental Gallery.html" title="Experimental">
+				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 			</a>
-			<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
-				<img src="Paper-50x66.png" title="Resume" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+			<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html" title="Resume">
+				<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
 			</a>
 		</section>
 		<section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>
