--- a/resume.html
+++ b/resume.html
@@ -38,28 +38,28 @@
 
 		<!-- Icon Menu -->
 		<nav class="icon-menu">
-			<a id="menu-home" class="menu-icon" href="index.html">
+			<a id="menu-home" class="menu-icon" title="Homepage" href="index.html">
 				<img src="images/home.png" alt="Homepage Link">
 			</a>
-			<a id="menu-animation" class="menu-icon" href="animation.html">
+			<a id="menu-animation" class="menu-icon" title="3D Animated Music Videos" href="animation.html">
 				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
-			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
+			<a id="menu-photo-editing" class="menu-icon" title="Image Editing" href="image-editing.html">
 				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 			</a>
-			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
+			<a id="menu-cover-art" class="menu-icon" title="Cover Art" href="cover-art.html">
 				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 			</a>
-			<a id="menu-surreal" class="menu-icon" href="surreal.html">
+			<a id="menu-surreal" class="menu-icon" title="Surreal Art" href="surreal.html">
 				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
-			<a id="menu-glass" class="menu-icon" href="reflections.html">
+			<a id="menu-glass" class="menu-icon" title="="Reflection and Refraction" href="reflections.html">
 				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
-			<a id="menu-experimental" class="menu-icon" href="experimental.html">
+			<a id="menu-experimental" class="menu-icon" title="Experimental" href="experimental.html">
 				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
-			<a id="menu-resume" class="menu-icon" href="resume.html">
+			<a id="menu-resume" class="menu-icon" title="Resume" href="resume.html">
 				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
 		</nav>
