--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Resume"/>
 		<meta property="fb:admins" content="USER_ID"/>
-		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Technical Resume"/>
+		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Resume"/>
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
@@ -53,7 +53,7 @@
 			<a id="menu-surreal" class="menu-icon" title="Surreal Art" href="surreal.html">
 				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
-			<a id="menu-glass" class="menu-icon" title="="Reflection and Refraction" href="reflections.html">
+			<a id="menu-glass" class="menu-icon" title="Reflection and Refraction" href="reflections.html">
 				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 			<a id="menu-experimental" class="menu-icon" title="Experimental" href="experimental.html">
